[metadata]
name = sensitivity
version = attr: sensitivity.__version__
author = attr: sensitivity.__author__
description = Sensitivity analysis of the datafusiontools package
long_description = file: ReadMe.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: BSD 3
    Operating System :: OS Independent

[options]
packages =
    sensitivity
include_package_data = True
install_requires =
    numpy>=1.22
    matplotlib>=3.5
    SALib>=1.4
    core @ git+https://github.com/DataFusionTools/core
python_requires = >=3.9

[options.extras_require]
testing =
    pytest>=7.2
    pytest-cov>=4.0
    tox>=4.4
    mypy>=1.1
    core @ git+https://github.com/DataFusionTools/core
docs =
    Sphinx==6.2.1
    sphinx-rtd-theme==1.2.2
